// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrganizationUsers /> should render properly with no users 1`] = `
.emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-5 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-6 {
  height: 100%;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-6 tr {
  background-color: #252525;
}

.emotion-6 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-6 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-6 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-6 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-6 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-6 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-6 td {
  max-width: calc(100vw / 4);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-6 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-6 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-7 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-7:nth-of-type(0) {
  width: 100%;
}

.emotion-7:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-8 {
  padding: 12px 16px;
}

.emotion-15 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-15:nth-of-type(0) {
  width: 100%;
}

.emotion-15:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px 16px;
}

.emotion-17 {
  height: 100%;
  pointer-events: none;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <h3
        className="emotion-3"
      >
        Users
        : 
        0
      </h3>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-5"
      >
        <table
          className="emotion-6"
        >
          <thead>
            <tr>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  User Email
                </div>
              </th>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  First Name
                </div>
              </th>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  Last Name
                </div>
              </th>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  Projects
                </div>
              </th>
              <th
                className="emotion-15"
              >
                <div
                  className="emotion-16"
                >
                  <svg
                    data-file-name="kebab.svg"
                    height={20}
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="emotion-17"
            >
              <td
                colSpan={5}
              >
                <div
                  className="emotion-18"
                >
                  <span />
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`<OrganizationUsers /> should render properly with users 1`] = `
.emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-6 {
  height: auto;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-6 tr {
  background-color: #252525;
}

.emotion-6 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-6 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-6 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-6 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-6 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-6 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-6 td {
  max-width: calc(100vw / 4);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-6 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-6 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-7 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-7:nth-of-type(0) {
  width: 100%;
}

.emotion-7:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-8 {
  padding: 12px 16px;
}

.emotion-15 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-15:nth-of-type(0) {
  width: 100%;
}

.emotion-15:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px 16px;
}

.emotion-17 {
  position: relative;
  height: 100%;
}

.emotion-18 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 6px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #191919;
  background-color: transparent;
  margin: -6px;
}

.emotion-18:hover,
.emotion-18.focus-visible:focus {
  color: #ffffff!important;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <h3
        className="emotion-3"
      >
        Users
        : 
        6
      </h3>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-5"
      >
        <table
          className="emotion-6"
        >
          <thead>
            <tr>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  User Email
                </div>
              </th>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  First Name
                </div>
              </th>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  Last Name
                </div>
              </th>
              <th
                className="emotion-7"
              >
                <div
                  className="emotion-8"
                >
                  Projects
                </div>
              </th>
              <th
                className="emotion-15"
              >
                <div
                  className="emotion-16"
                >
                  <svg
                    data-file-name="kebab.svg"
                    height={20}
                  />
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                software@zorroa.com
              </td>
              <td>
                Admin
              </td>
              <td>
                Adminson
              </td>
              <td>
                2
              </td>
              <td>
                <div
                  className="emotion-17"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-18"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                zach@zorroa.com
              </td>
              <td>
                Zach
              </td>
              <td>
                Schipono
              </td>
              <td>
                1
              </td>
              <td>
                <div
                  className="emotion-17"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-18"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                joanna@zorroa.com
              </td>
              <td>
                Joanna
              </td>
              <td>
                Gumiega
              </td>
              <td>
                1
              </td>
              <td>
                <div
                  className="emotion-17"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-18"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                mrc@zorroa.com
              </td>
              <td>
                Matt
              </td>
              <td>
                Chambers
              </td>
              <td>
                3
              </td>
              <td>
                <div
                  className="emotion-17"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-18"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                jbuhler@zorroa.com
              </td>
              <td>
                Juan
              </td>
              <td>
                Buhler
              </td>
              <td>
                3
              </td>
              <td>
                <div
                  className="emotion-17"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-18"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                ryan@zorroa.com
              </td>
              <td>
                Ryan
              </td>
              <td>
                Gaspar
              </td>
              <td>
                1
              </td>
              <td>
                <div
                  className="emotion-17"
                >
                  <button
                    aria-label="Toggle Actions Menu"
                    className="actions emotion-18"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
         
      </div>
      <Pagination
        currentPage={1}
        totalPages={1}
      />
      <div>
         
      </div>
    </div>
  </div>
</div>
`;
